added interface IRabbit
